# wait3

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: clap.rs  cmd.rs  func.rs  lib.rs  main.rs
test/: warten
